# securenode

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
.github/workflows/: ci.yml
config/: esp32_devkitc_wroom.conf  stm32f4_disco.conf
include/: securenode.h
not_shipped_LR_GD/: cache_info.txt
not_shipped_LR_GD/Linear_regression/: Makefile  gen_cgpa_pkg_data.c  gen_cgpa_pkg_data.h  single_lr.c
not_shipped_LR_GD/matrix/: matrix_inverse.c
not_shipped_LR_GD/matrix_mul_perf/: matrix_mul.py  matrix_mul_perf.cpp  performance_log
overlays/: esp32_devkitc_wroom.overlay  stm32f4_disco.overlay
scripts/: build.sh  flash.sh
src/: main.c
